// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with default properties 1`] = `
.c1 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 0px 4px;
  border-radius: 4px;
  display: inline-block;
  line-height: 1rem;
}

.c0 backgroundColor {
  low-contrast: hsla(216,19%,89%,1);
  high-contrast: hsla(217,18%,45%,1);
}

<div>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c1"
      color="surface.text.subtle.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST_TOKEN
    </code>
  </span>
</div>
`;

exports[`<Code /> should render medium Code 1`] = `
.c1 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 0px 4px;
  border-radius: 4px;
  display: inline-block;
  line-height: 1rem;
}

.c0 backgroundColor {
  low-contrast: hsla(216,19%,89%,1);
  high-contrast: hsla(217,18%,45%,1);
}

<div>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c1"
      color="surface.text.subtle.lowContrast"
      font-family="code"
      font-size="100"
    >
      MEDIUM
    </code>
  </span>
</div>
`;

exports[`<Code /> should render small Code 1`] = `
.c1 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 0px 4px;
  border-radius: 4px;
  display: inline-block;
  line-height: 1rem;
}

.c0 backgroundColor {
  low-contrast: hsla(216,19%,89%,1);
  high-contrast: hsla(217,18%,45%,1);
}

<div>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c1"
      color="surface.text.subtle.lowContrast"
      font-family="code"
      font-size="75"
    >
      SMALL
    </code>
  </span>
</div>
`;
